[package]
name = "dmx-messages"
version = "0.1.0"
edition = "2021"

[dependencies]
serde-big-array = "0.5.1"
serde_json = "1.0.120"
ts-rs = { version = "9.0.1", features = ["serde_json"], optional = true }

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.postcard]
version = "1.0"
features = ["experimental-derive"]

[dependencies.postcard-rpc]
version = "0.5"

[features]
ts = [ "dep:ts-rs" ]