[package]
edition = "2021"
name = "dmx-reader"
version = "0.1.0"
authors = ["Jomer.Dev <Jomer.Dev@posteo.de>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

## need these for pio
pio-proc = "0.2.2"
pio = "0.2.1"

embassy-executor        = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp              = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync            = { version = "0.5.0", features = ["defmt"] }
embassy-time            = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb             = { version = "0.2.0", features = ["defmt"] }

cortex-m = { version = "0.7.6" }
static_cell = "2.1.0"
serde = { version = "1.0.*", default-features = false }
postcard = {version = "1.0.*", features = ["heapless"] }
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
heapless = { version = "0.8.0", features = ["serde"] }
assign-resources = "0.4.1"
fixed-macro = "1.2.0"
fixed = "1.27.0"
postcard-rpc = { version = "0.5.1", features = ["defmt", "embassy-usb-0_2-server"] }
serde-big-array = "0.5.1"

dmx-messages = { path = "../dmx-messages", default-features = false }
byteorder = { version = "1.4.*", default-features = false }


[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/JomerDev/embassy", rev = "1b957db162524cdaf9c0013379e493507ad0aa5b" }
embassy-executor     = { git = "https://github.com/JomerDev/embassy", rev = "1b957db162524cdaf9c0013379e493507ad0aa5b" }
embassy-rp           = { git = "https://github.com/JomerDev/embassy", rev = "1b957db162524cdaf9c0013379e493507ad0aa5b" }
embassy-sync         = { git = "https://github.com/JomerDev/embassy", rev = "1b957db162524cdaf9c0013379e493507ad0aa5b" }
embassy-time         = { git = "https://github.com/JomerDev/embassy", rev = "1b957db162524cdaf9c0013379e493507ad0aa5b" }
embassy-usb          = { git = "https://github.com/JomerDev/embassy", rev = "1b957db162524cdaf9c0013379e493507ad0aa5b" }
embassy-usb-driver   = { git = "https://github.com/JomerDev/embassy", rev = "1b957db162524cdaf9c0013379e493507ad0aa5b" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = false

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'off'
opt-level = 0
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'off'
opt-level = 's'
